<resources>
    <string name="app_name">SQLite</string>
    <string name="enter_name">Country Name</string>
    <string name="add_record">Add Record</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No records found</string>
    <string name="enter_desc">Currency</string>
    <string name="enter_title">Country</string>
</resources>
